--- a/GoogleFormAnswerGenerator.csproj
+++ b/GoogleFormAnswerGenerator.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.3" />
     <PackageReference Include="Google.Apis.Docs.v1" Version="1.50.0.2233" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.30" />
   </ItemGroup>
 
   <ItemGroup>
